# gi-gen-ai

./: .gitignore  README.md  docusaurus.config.js  sidebars.js
.claude/: settings.local.json
.specify/templates/: plan-template.md  spec-template.md
docs/: content-standards.md
hackthons/make-your-resume/: index.html  index.js  index.ts  package-lock.json  package.json  style.css  tsconfig.json
hackthons/phyical-ai-book/: .gitignore  README.md  check_qdrant.py  docusaurus.config.js  package-lock.json  package.json  requirements.txt  reset_qdrant.py  run_ingestion.py  test_chat_api.py  (+7 more)
hackthons/to-do-hackathon/: .gitignore  README.md  constitution.yaml  pyproject.toml  setup.py
hackthons/to-do-hackathon/history/prompts/constitution/: 1-create-constitution.constitution.prompt.md
hackthons/to-do-hackathon/history/prompts/todo-console-app/: 2-create-todo-spec.spec.prompt.md  3-plan-todo-app.plan.prompt.md  4-create-todo-tasks.tasks.prompt.md  5-implement-todo-app.implement.prompt.md
hackthons/to-do-hackathon/specs/001-todo-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
hackthons/to-do-hackathon/specs/001-todo-console-app/checklists/: requirements.md
hackthons/to-do-hackathon/specs/001-todo-console-app/contracts/: todo-api-contracts.md
hackthons/to-do-hackathon/src/: main.py
hackthons/to-do-hackathon/src/cli/: ui.py
hackthons/to-do-hackathon/src/models/: task.py
hackthons/to-do-hackathon/src/services/: todo_manager.py
number-guessing-game/: index.js  index.ts  package-lock.json
simple-calculator/: index.js
(+214 files in other folders)
