[project]
name = "todo-app"
version = "0.1.0"
description = "A command-line todo application that stores tasks entirely in memory"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
todo-app = "src.main:main"